--- a/markdoc.config.json
+++ b/markdoc.config.json
@@ -1,6 +1,6 @@
 [
     {
-        "id": "appwrite",
+        "id": "neurofin",
         "path": "src/",
         "schema": {
             "path": ".svelte-kit/markdoc_schema.js",
