--- a/package.json
+++ b/package.json
@@ -23,51 +23,51 @@
     "packageManager": "pnpm@8.15.6",
     "dependencies": {
         "compression": "^1.7.4",
-        "express": "^4.18.2"
+        "express": "^4.19.2"
     },
     "devDependencies": {
-        "@appwrite.io/console": "^0.6.1",
-        "@appwrite.io/pink": "0.16",
-        "@appwrite.io/pink-icons": "0.16",
+        "@appwrite.io/console": "^0.6.2",
+        "@appwrite.io/pink": "~0.16.0",
+        "@appwrite.io/pink-icons": "~0.16.0",
         "@appwrite.io/repo": "github:appwrite/appwrite#main",
-        "@melt-ui/pp": "^0.3.0",
-        "@melt-ui/svelte": "^0.74.3",
-        "@playwright/test": "^1.42.0",
+        "@melt-ui/pp": "^0.3.2",
+        "@melt-ui/svelte": "^0.74.4",
+        "@playwright/test": "^1.44.1",
         "@sveltejs/adapter-node": "^4.0.1",
-        "@sveltejs/enhanced-img": "^0.1.8",
-        "@sveltejs/kit": "^2.5.2",
-        "@sveltejs/vite-plugin-svelte": "^3.0.2",
+        "@sveltejs/enhanced-img": "^0.1.9",
+        "@sveltejs/kit": "^2.5.10",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@types/compression": "^1.7.5",
         "@types/glob": "^8.1.0",
-        "@types/markdown-it": "^13.0.7",
+        "@types/markdown-it": "^13.0.8",
         "@types/morgan": "^1.9.9",
-        "@typescript-eslint/eslint-plugin": "^7.1.0",
-        "@typescript-eslint/parser": "^7.1.0",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
         "dequal": "^2.0.3",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-svelte": "^2.35.1",
+        "eslint-plugin-svelte": "^2.39.0",
         "highlight.js": "^11.9.0",
-        "markdown-it": "^14.0.0",
+        "markdown-it": "^14.1.0",
         "meilisearch": "^0.37.0",
-        "motion": "^10.17.0",
-        "node-html-parser": "^6.1.12",
+        "motion": "^10.17.1",
+        "node-html-parser": "^6.1.13",
         "openapi-types": "^12.1.3",
         "oslllo-svg-fixer": "^3.0.0",
-        "prettier": "^3.2.5",
-        "prettier-plugin-svelte": "^3.2.2",
-        "sass": "^1.71.1",
-        "sharp": "^0.33.2",
-        "svelte": "^4.2.12",
-        "svelte-check": "^3.6.5",
+        "prettier": "^3.3.0",
+        "prettier-plugin-svelte": "^3.2.3",
+        "sass": "^1.77.4",
+        "sharp": "^0.33.4",
+        "svelte": "^4.2.17",
+        "svelte-check": "^3.8.0",
         "svelte-markdoc-preprocess": "^1.2.1",
         "svelte-markdown": "^0.4.1",
-        "svgtofont": "^4.1.2",
+        "svgtofont": "^4.2.0",
         "tslib": "^2.6.2",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.4",
+        "typescript": "^5.4.5",
+        "vite": "^5.2.12",
         "vite-plugin-dynamic-import": "^1.5.0",
-        "vite-plugin-image-optimizer": "^1.1.7",
-        "vitest": "^1.3.1"
+        "vite-plugin-image-optimizer": "^1.1.8",
+        "vitest": "^1.6.0"
     }
 }
