--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build": "set NODE_OPTIONS='--max-old-space-size=4096' && vite build",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "clean": "rm -rf node_modules && rm -rf .svelte_kit && pnpm i",
