--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "website-svelte",
+    "name": "neurofin-svelte",
     "version": "0.0.1",
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "set NODE_OPTIONS='--max-old-space-size=4096' && vite build",
+        "build": "set NODE_OPTIONS='--max-old-space-size=16384' && vite build --debug",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "clean": "rm -rf node_modules && rm -rf .svelte_kit && pnpm i",
         "dev": "vite dev",
-        "download-contributors": "node ./scripts/download-contributor-data.js",
         "format": "prettier --plugin-search-dir . --write .",
         "icons:build": "node ./src/icons/build.js",
         "icons:generate": "node ./src/icons/optimize.js && node ./src/icons/build.js",
@@ -51,8 +50,7 @@
         "markdown-it": "^14.1.0",
         "meilisearch": "^0.37.0",
         "motion": "^10.17.1",
-        "node-html-parser": "^6.1.13",
-        "openapi-types": "^12.1.3",
+        "node-html-parser": "^6.1.13",        
         "oslllo-svg-fixer": "^3.0.0",
         "prettier": "^3.3.0",
         "prettier-plugin-svelte": "^3.2.3",
